tests/baselines/reference/checkingObjectDefinePropertyOnFunctionNonexistentPropertyNoCrash1.errors.txt
index.js(5,21): error TS2339: Property 'fn' does not exist on type '{ (...args: any[]): void; readonly name: string; }'.


==== index.js (1 errors) ====
    export function test(fn) {
      const composed = function (...args) { }
    
      Object.defineProperty(composed, 'name', {
        value: composed.fn + '_test'
                        ~~
!!! error TS2339: Property 'fn' does not exist on type '{ (...args: any[]): void; readonly name: string; }'.
      })
    
      return composed
    }
    